--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -106,29 +106,40 @@ body {
   gap: 1rem;
   padding: 0 $padding;
 
-  > div {
+  >div {
     border-radius: 6px;
     background-color: white;
-    min-height: 228px;
-    padding: 2rem 1.5rem;
+    overflow: hidden;
 
-    :first-child {
-      color: #6e8098;
+    img {
+      width: 100%;
+      height: auto;
     }
+    >div {
+      
+      min-height: 228px;
+      padding: 2rem 1.5rem;
 
-    h4 {
-      padding: 1rem 0rem;
-      color: #19202d;
-    }
+      :first-child {
+        // border-top: 1px solid #6e8098;
+        padding-top: 0.7rem;
+        color: #6e8098;
+      }
 
-    p {
-      color: #6e8098;
-    }
+      h4 {
+        padding: 1rem 0rem;
+        color: #19202d;
+      }
 
-    .tags {
-      display: flex;
-      padding-top: 1rem;
-      gap: 0.5rem;
+      p {
+        color: #6e8098;
+      }
+
+      .tags {
+        display: flex;
+        padding-top: 1rem;
+        gap: 0.5rem;
+      }
     }
   }
 }
