adding redux toolkit for filters

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -151,13 +151,13 @@ body {
 }
 
 @media only screen and (max-width: 1024px) {
-  .content {
+  .grid-card {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .content {
+  .grid-card {
     grid-template-columns: 1fr;
   }
 }
